2005-12-23  Sebastien Pouliot  <sebastien@ximian.com>

	* DecimalTest.cs: Re-enabled Single rounding tests (which had nothing
	to do with bug #60227). The problems were in the string output of the
	float - which was then used to parse the decimal.

2005-12-22  Raja R Harinath  <rharinath@novell.com>

	* ConsoleTest.cs: Modernize to use attributes and Assert class.

2005-12-20  Sebastien Pouliot  <sebastien@ximian.com>

	* DecimalTest.cs: Fixed test cases to run (without failures) on 2.0.
	Re-activated TestDiv by excluding only the failures from Mono (so it
	doesn't get worse), in fact we only have 1 (very small) difference
	with MS 2.0.
	* DecimalTest2.cs: Fixed test cases to run (without failures) on 2.0.

2005-12-20  Raja R Harinath  <rharinath@novell.com>

	* TypeTest.cs (FullNameGenerics): Add tests for AssemblyQualifiedName.
	(IsAssignable): New.  Test Type.IsAssignableFrom for generic types.

2005-12-19  Sebastien Pouliot  <sebastien@ximian.com>

	* ArrayTest.cs: Added test cases for a binary search with an empty
	list (bug #77030). Fixed other test cases so they execute without 
	failures under MS 2.0. Removed test cases for API changes in 2.0 
	final.

2005-12-18  Raja R Harinath  <harinath@gmail.com>

	* TypeTest.cs (FullNameGenerics): Identify individual assertions.

2005-12-15  Sebastien Pouliot  <sebastien@ximian.com>

	* DoubleTest.cs: Added test cases for parsing hexadecimal strings.
	* SingleTest.cs: Added test cases for parsing hexadecimal strings.

2005-12-14  Sebastien Pouliot  <sebastien@ximian.com>

	* BadImageFormatExceptionCas.cs: MS fixed this in 2.0 final (#71861).

2005-12-13  Zoltan Varga  <vargaz@gmail.com>

	* ArrayTest.cs: Add regression test for #76973.

2005-12-13  Atsushi Enomoto  <atsushi@ximian.com>

	* DoubleTest.cs : added test for bug #75228.

2005-12-09  Raja R Harinath  <rharinath@novell.com>

	* TypeTest.cs (TypeParameterIsNotGeneric): New.  Test invariants
	listed in MSDN docs.
